Fix overflow on single page

--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -42,6 +42,7 @@
 .main {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  overflow: auto;
 
   > .loading-animation {
     > div {
